# traderbot

./: .gitignore  README.md  pyproject.toml
data/: sample_prices.csv
src/traderbot/: __init__.py  backtest.py  cli.py  config.py  data.py  live.py  strategies.py  trading_bot.py
tests/: test_backtest.py  test_config.py  test_strategy.py  test_trading_bot.py
